# secret-sharing-rust

./: Cargo.toml  README.md
src/: main.rs  sss.rs  vss.rs
