
[package]
name = "cryptographic-algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Big integer support
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"

# Random number generation
rand = "0.8"

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'unwind'
debug = false
